unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <formula>AcctSeed__Customer__r.Account_Executive__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive</label>
    <type>Text</type>
</CustomField>