unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Account_Master_Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Master_Billing_Name__c</fullName>
    <formula>AcctSeed__Customer__r.Billing_Master__r.Master_Billing_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Master Billing Name</label>
    <type>Text</type>
</CustomField>