unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main contact for email of billings.</description>
    <inlineHelpText>Main contact for email of billings.</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Billings</relationshipLabel>
    <relationshipName>Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>