unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Comment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Comment__c</fullName>
    <description>Comment for display on Recurring Billing.“</description>
    <inlineHelpText>Comment for display on Recurring Billing.“</inlineHelpText>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>