unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <inlineHelpText>The date until which billings will be created from this recurring billing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>