unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Last_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Billing_Date__c</fullName>
    <label>Last Billing Date</label>
    <type>Date</type>
</CustomField>