unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Line_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Line_Count__c</fullName>
    <inlineHelpText>Number of recurring billing lines associated with this record.</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>