unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Next_Billing_Create__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Next_Billing_Create__c</fullName>
    <formula>IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=7, "Next 7 Days", 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=30, "8 To 30 Days", 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=60, "31 To 60 Days", 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=90, "61 To 90 Days", 
"Beyond 90 Days"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time frame to create next billing.</inlineHelpText>
    <label>Next Billing Create</label>
    <type>Text</type>
</CustomField>