unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PO_Number__c</fullName>
    <description>Purchase Order Number</description>
    <inlineHelpText>Purchase Order Number</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>