unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax__c</fullName>
    <inlineHelpText>Summary of the Recurring Billing Lines' Tax Amount fields</inlineHelpText>
    <label>Sales Tax</label>
    <summarizedField>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Tax_Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>