unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <description>Sub-total + Sales Tax; should cross-check of summary of all  Recurring Billing Lines' Total fields</description>
    <label>Total</label>
    <summarizedField>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>