unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Billing_Master__c.field-meta.xml
<CustomField>
    <fullName>Billing_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Master</label>
    <referenceTo>Billing_Master__c</referenceTo>
    <relationshipLabel>Recurring Billings</relationshipLabel>
    <relationshipName>Recurring_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>