unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/CCE_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>CCE_Contract_Number__c</fullName>
    <label>CCE Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>