unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/CCE_Portfolio_Description__c.field-meta.xml
<CustomField>
    <fullName>CCE_Portfolio_Description__c</fullName>
    <formula>IF(ISPICKVAL( CCE_Portfolio__c , "IPRO-1") , "IPro Media In House Lease File", 
IF(ISPICKVAL( CCE_Portfolio__c , "TSB-1") , "TSB Master Lease Portfolio", 
IF(ISPICKVAL( CCE_Portfolio__c , "GA-019130-0000") , "Great America Standard/TSP Lease Portfolio", 
IF(ISPICKVAL( CCE_Portfolio__c , "GA-019130-0001") , "Great America AnyWare Portfolio", 
IF(ISPICKVAL( CCE_Portfolio__c , "WF-207778.0000") , "Wells Fargo Standard Lease Portfolio", 
IF(ISPICKVAL( CCE_Portfolio__c , "MTL-1") , "Mitel Standard/TSP Lease Portfolio", 
"None"))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE Portfolio Description</label>
    <type>Text</type>
</CustomField>