unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Contract_Value_Unfunded__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Unfunded__c</fullName>
    <formula>Total_Unfunded_Monthly_Charge__c / 0.02102</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value-Unfunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>