unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/CW_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Billing_Type__c</fullName>
    <label>CW Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>