unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Independent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Independent_Partner__c</fullName>
    <label>Independent Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canoa Systems, Inc.</fullName>
            </value>
            <value>
                <fullName>Coastal Bend Technology Solutions</fullName>
            </value>
            <value>
                <fullName>FCS Communications, Inc.</fullName>
            </value>
            <value>
                <fullName>Infinity Wire Solutions</fullName>
            </value>
            <value>
                <fullName>Jeff Hicks Computer Consulting</fullName>
            </value>
            <value>
                <fullName>Ligas Enterprises</fullName>
            </value>
            <value>
                <fullName>RIT Group</fullName>
            </value>
            <value>
                <fullName>SCI Alarms</fullName>
            </value>
            <value>
                <fullName>Scott Enriquez</fullName>
            </value>
            <value>
                <fullName>TechSys Consulting</fullName>
            </value>
            <value>
                <fullName>Terry Wolfe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>