unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/IP_Commission__c.field-meta.xml
<CustomField>
    <fullName>IP_Commission__c</fullName>
    <formula>IP_Eligible_Revenue__c * IP_Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>