unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/IP_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>IP_Commission_Rate__c</fullName>
    <label>IP Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>