unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Legacy_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Discrepancy__c</fullName>
    <formula>AcctSeed__Total__c - Legacy_RB_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>