unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Legacy_IPro_RB__c.field-meta.xml
<CustomField>
    <fullName>Legacy_IPro_RB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy IPro RB</label>
    <referenceTo>Recurring_Billing_Master__c</referenceTo>
    <relationshipLabel>Recurring Billings</relationshipLabel>
    <relationshipName>Recurring_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>