unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Legacy_RB_Total__c.field-meta.xml
<CustomField>
    <fullName>Legacy_RB_Total__c</fullName>
    <formula>Legacy_IPro_RB__r.Total_Unfunded_Monthly_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy RB Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>