unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>Text(AcctSeed__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>