unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Recast_Contract_Payoff_Adj_Desc__c.field-meta.xml
<CustomField>
    <fullName>Recast_Contract_Payoff_Adj_Desc__c</fullName>
    <label>Contract Payoff Adjustment Description</label>
    <type>TextArea</type>
</CustomField>