unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Recast_Contract_Payoff_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Recast_Contract_Payoff_Adjustment__c</fullName>
    <label>Contract Payoff Adjustment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>