unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Recast_Net_Contract_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recast_Net_Contract_Payoff_Amount__c</fullName>
    <formula>Recast_Contract_Payoff_Amount__c + Recast_Contract_Payoff_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Contract Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>