unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Recast_Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Recast_Remaining_Term__c</fullName>
    <label>Remaining Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>