unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <formula>text( AcctSeed__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Text</label>
    <type>Text</type>
</CustomField>