unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Total_Funded_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Monthly_Charge__c</fullName>
    <label>Total Funded Monthly Charge</label>
    <summarizedField>AcctSeed__Recurring_Billing_Line__c.Funded_Total__c</summarizedField>
    <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>