unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Total_Funded_Unfunded__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Unfunded__c</fullName>
    <formula>Total_Funded_Monthly_Charge__c + Total_Unfunded_Monthly_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>