unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/fields/Total_Unfunded_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Unfunded_Monthly_Charge__c</fullName>
    <label>Total Unfunded Monthly Charge</label>
    <summarizedField>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Recurring_Billing_Line__c.CCE_Funding_Status__c</field>
        <operation>equals</operation>
        <value>Unfunded</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>