unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Customer_Alias__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Last_Billing_Date__c</columns>
    <columns>AcctSeed__Next_Billing_Date__c</columns>
    <columns>CCE__c</columns>
    <columns>CCE_Portfolio__c</columns>
    <columns>AcctSeed__Billing_Frequency__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>