unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/listViews/All_Active_with_Master_Billing.listView-meta.xml
<ListView>
    <fullName>All_Active_with_Master_Billing</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>AcctSeed__Billing_Frequency__c</columns>
    <columns>AcctSeed__Next_Billing_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>Total_Unfunded_Monthly_Charge__c</columns>
    <columns>Total_Funded_Monthly_Charge__c</columns>
    <columns>Total_Funded_Unfunded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Billing_Master__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Active with Master Billing</label>
    <language>en_US</language>
</ListView>