unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/listViews/Billing_To_Run_IPro.listView-meta.xml
<ListView>
    <fullName>Billing_To_Run_IPro</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Customer_Alias__c</columns>
    <columns>AcctSeed__Last_Billing_Date__c</columns>
    <columns>AcctSeed__Next_Billing_Date__c</columns>
    <columns>CCE__c</columns>
    <columns>CCE_Portfolio__c</columns>
    <columns>AcctSeed__Opportunity__c</columns>
    <columns>AcctSeed__Billing_Frequency__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CCE__c</field>
        <operation>equals</operation>
        <value>IPro Media</value>
    </filters>
    <filters>
        <field>AcctSeed__Next_Billing_Date__c</field>
        <operation>equals</operation>
        <value>8/1/2022</value>
    </filters>
    <label>Billings to Run - IPro</label>
    <language>en_US</language>
</ListView>