unpackaged/main/default/objects/AcctSeed__Recurring_Billing__c/listViews/Billings_to_Run_Exceptions.listView-meta.xml
<ListView>
    <fullName>Billings_to_Run_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Customer_Alias__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Last_Billing_Date__c</columns>
    <columns>AcctSeed__Next_Billing_Date__c</columns>
    <columns>CCE__c</columns>
    <columns>CCE_Portfolio__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>AcctSeed__Opportunity__c</columns>
    <columns>AcctSeed__Billing_Frequency__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Next_Billing_Date__c</field>
        <operation>notEqual</operation>
        <value>10/1/2017</value>
    </filters>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Billings to Run - Exceptions</label>
    <language>en_US</language>
</ListView>